# Deep-Research-Agent

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  langgraph.json  pyproject.toml  simple_test.py  test_app.py  test_graph.py  visualize_graph.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
api/: index.py
app/: __init__.py  graph.py  main.py  sample_graph.py
app/agents/: __init__.py  banking_agent.py  base_agent.py  deep_research_agent.py  finance_agent.py
app/services/: __init__.py  cache.py  queue.py  vector_db.py
deep_researcher/: main.py
deep_researcher/app/agents/: finance.py
graph_exports/: README.md  graph_structure.dot  graph_structure.json  graph_structure.mmd  graph_structure.puml
